# CppQuoteApiGetter

./: CMakeLists.txt  QuoteGenerator.cpp  QuoteGenerator.h  main.cpp
